# RS2

./: .gitignore  Hardware_setup_instructions  README.md  RS2.sh  camera_node_command.txt  gazebo instructions  ros1 docker commands  software setup instructions.txt
GUI/: README.md  chessboard.cpp
calibrations/: industry_calib_config.yaml
chess_peice_meshes/dae/: black_knight.dae  black_rook.dae  white_knight.dae
chess_peice_meshes/dae/v1/: black_bishop.dae  black_king.dae  black_knight.dae  black_pawn.dae  black_queen.dae  black_rook.dae  white_bishop.dae  white_king.dae  white_knight.dae
chess_peice_meshes/dae/v2/: chess_bin.dae  chess_bin_lid.dae  white_bishop.dae
chess_peice_meshes/stl/: bishop.stl  king.stl  knight.stl  pawn.stl
gazebo_models/black_bishop/: model.config  model.sdf
gazebo_models/black_bishop/meshes/: black_bishop.dae
gazebo_models/black_king/: model.config  model.sdf
gazebo_models/black_king/meshes/: black_king.dae
gazebo_models/black_knight/: model.config  model.sdf
gazebo_models/black_pawn/: model.config  model.sdf
gazebo_models/black_queen/: model.config  model.sdf
gazebo_models/black_queen/meshes/: black_queen.dae
gazebo_models/black_rook/: model.config  model.sdf
gazebo_models/black_rook/meshes/: rook.stl
gazebo_models/board/: model.config  model.sdf
gazebo_models/board/meshes/: board.dae  board.stl
gazebo_models/chess_bin/: model.config  model.sdf
gazebo_models/chess_bin/meshes/: chess_bin.dae  chess_binSTL.stl
gazebo_models/chess_bin_lid/: model.config  model.sdf
gazebo_models/chess_bin_lid/meshes/: chess_bin_lid.dae
gazebo_models/chess_clock/: model.config  model.sdf
gazebo_models/chess_clock/meshes/: chess_clock.dae
gazebo_models/trolley/: model.config  model.sdf
gazebo_models/white_bishop/: model.config  model.sdf
gazebo_models/white_bishop/meshes/: white_bishop.dae
gazebo_models/white_king/: model.config  model.sdf
gazebo_models/white_king/meshes/: white_king.dae
gazebo_models/white_knight/: model.config  model.sdf
gazebo_models/white_pawn/: model.config  model.sdf
gazebo_models/white_pawn/meshes/: white_pawn.dae
gazebo_models/white_queen/: model.config  model.sdf
gazebo_models/white_queen/meshes/: queen.stl  white_queen.dae
gazebo_models/white_rook/: model.config  model.sdf
gazebo_models/white_rook/meshes/: white_rook.dae
install/: local_setup.sh  setup.sh
log/: latest_build
python_tests/: arucoChecker.py  detect.py  hand_eye_calibration_result.txt  handeye.py  handeye2.py  image_sub_class.py  pose_checker.py  pose_pub.py  pose_pub_class.py  red_dot_test.py  static_calib_pub.py  test.py  test_pose_pub.py  transform_polygon.py
python_tests/extrinsics_realsense/: eyehand.txt
python_tests/intrinsics realsense/: intrinsics_calc.py  intrinsics_ros.py  output.npz
python_tests/red_dot_tests/: red_dot_test.py
python_tests/ros_img_saver.py/: img_save.py
ros2_rs2_packages/chess_pi/: CMakeLists.txt
ros2_rs2_packages/ur3_test_control/: CMakeLists.txt  package.xml
ros2_rs2_packages/ur3_test_control/config/: visual_parameters.yaml
ros2_rs2_packages/ur3_test_control/install/: local_setup.sh
ros2_rs2_packages/ur3_test_control/install/ur3_test_control/share/ur3_test_control/: package.sh  package.zsh
ros2_rs2_packages/ur3_test_control/launch/: depthCam.launch.py  gazebo_sim.launch.py  moveL.launch.py  system_sep.launch.py  system_sep_moveIt.launch.py
ros2_rs2_packages/ur3_test_control/meshes/: wrist3.dae
ros2_rs2_packages/ur3_test_control/scripts/: camera_node.py  chess_peice_marker_pub.py  create_pieces.py  gazebo_manager.py  img_pub.py  pose_pub_class.py  pose_sub_class.py  servo_control_node.py
ros2_rs2_packages/ur3_test_control/src/: chessboard.cpp  image_processing.cpp  keyboard_node.cpp  main.cpp  moveItTest.cpp
ros2_rs2_packages/ur3_test_control/urdf/: d435i_robot.urdf
ros2_rs2_packages/ur3_test_control/world/: basic_complete_world.world  cubeWorld.world  full_complete_v1.world  full_complete_v2.world  full_complete_v3.world  mini_world.txt  test3.world  test4.world  test5.world  test6.world  test7.world  testWorld.world
rosBags/rosbag2_2025_04_23-17_53_35/: metadata.yaml
voice/: speaker.py
(+36 files in other folders)
